# TradingGPT

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/backtesting/: metrics.py  runner.py
backend/app/core/: logging.py  scheduler.py  security.py
backend/app/db/: session.py
backend/app/domain/: enums.py  interfaces.py  models.py
backend/app/engines/: base.py  crt.py  ict.py  market_structure.py  primitives.py  regime.py  scoring.py  smc.py
backend/app/llm/: analysis_engine.py  client.py
backend/app/market_data/: provider.py
backend/app/notifications/: telegram.py
backend/app/orchestrator/: pipeline.py
backend/app/paper_trading/: monitor.py  positions.py
backend/app/rag/: chunker.py  embedder.py  ingest.py  retriever.py  store.py
backend/app/repositories/: analysis_repo.py
backend/app/risk/: risk_engine.py
backend/app/schemas/: analysis.py  journal.py  webhook.py
backend/app/selection/: selector.py
backend/app/strategies/: base.py  breakout.py  crt.py  ict.py  liquidity_sweep_reversal.py  market_structure.py  pullback.py  registry.py  session_based.py  smc.py  (+1 more)
backend/static/: index.html
backend/tests/: conftest.py
docs/: API.md  ARCHITECTURE.md  DATABASE_SCHEMA.sql
frontend/: Dockerfile  package.json
frontend/lib/: api.ts
knowledge_base/journals/: sample_trades.jsonl
knowledge_base/strategies/: ict_playbook.md
scripts/: pull_models.sh
(+20 files in other folders)
