[project]
name = "tradinggpt"
version = "0.1.0"
description = "Institutional-grade AI Trading Analyst (ICT/SMC/CRT + RAG + local LLM)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "celery>=5.3",
    "redis>=5.0",
    "yfinance>=1.4.1",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
rag = ["chromadb>=0.5", "sentence-transformers>=3.0"]
prod = ["psycopg2-binary>=2.9", "qdrant-client>=1.9"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100", "ruff>=0.4", "mypy>=1.10"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
